Closed Bug 1393536 Opened 8 years ago Closed 8 years ago

Fix Unused Variable Warnings in widget/

Categories

(Core :: Widget: Win32, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla57
Tracking Status
firefox57 --- fixed

People

(Reporter: tjr, Assigned: tjr)

References

Details

(Whiteboard: [tor])

Attachments

(1 file)

No description provided.
Attachment #8900835 - Flags: review?(jmathies)
Comment on attachment 8900835 [details] Bug 1393536 Clean up unused variables in widget/ https://reviewboard.mozilla.org/r/172278/#review177992 ::: widget/windows/GfxInfo.cpp:602 (Diff revision 2) > GetProcAddress(dxgiModule, "CreateDXGIFactory"); > > if (createDXGIFactory) { > RefPtr<IDXGIFactory> factory = nullptr; > - HRESULT hrf = createDXGIFactory(__uuidof(IDXGIFactory), > + createDXGIFactory(__uuidof(IDXGIFactory), > (void**)(&factory) ); nit - indentation fix needed
Attachment #8900835 - Flags: review?(jmathies) → review+
Keywords: checkin-needed
Pushed by ryanvm@gmail.com: https://hg.mozilla.org/integration/autoland/rev/e2566bf15934 Clean up unused variables in widget/ r=jimm
Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla57
No longer blocks: 1330608
Blocks: 1394433
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: