Bug 1393536 Clean up unused variables in widget/ r=jimm

MozReview-Commit-ID: 9NBzIriF8NU